--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_TOKEN=your_discord_token
-RIOT_API_KEY=your_riot_api_key
-RIOT_REGION=na1
+DISCORD_TOKEN=ODU5NTQ0ODk3OTEyMDQ1NjI5.GB9OQ2.CoaGeYGLrNCfFdVFX_ZGbcSi8pkG3g4u7ttO4c
+RIOT_API_KEY=RGAPI-0ff73f96-c30e-44d0-8f2e-24ec79fc2a32
+RIOT_REGION=euw1
